# auli-server-local

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  readme.md  start.sh
.claude/: settings.json
entities/rs/: entity.json  portal-faqs.txt  portal-notas.txt  portal-pareceres.txt  portal-servicos.txt  prompt.txt
migrations/: 20240101000000_create_users.sql  20240102000000_create_refresh_tokens.sql  20240103000000_create_verification_tokens.sql  20240104000000_create_password_reset_tokens.sql  sql
scripts/: auli-sync.sh  start_all.sh  start_local.sh  sync-to-wsl.ps1
scripts/raw/: faq_site_tree.json  servicos-a-agentes-publicos.json  servicos-a-empresas.json  servicos-a-fornecedores.json  servicos-a-servidores-publicos.json  servicos-ao-cidadao.json
src/: config.rs  errors.rs  lib.rs  main.rs  state.rs  util.rs
src/api/: dto.rs  mod.rs
src/api/handlers/: collections.rs  health.rs  mod.rs  question.rs
src/auth/: handler.rs  jwt.rs  mod.rs  types.rs
src/clients/: embedder.rs  ingest.rs  llm.rs  mod.rs  vector_store.rs
src/domain/: collections.rs  entities.rs  mod.rs
src/rag/: mod.rs  pipeline.rs
tests/: api.rs
