[package]
name = "auli-server"
version = "0.2.0"
edition = "2021"

# O binário e os testes referenciam a biblioteca como `auli_server` (nome documentado),
# então fixamos o nome do crate da lib independentemente do nome do pacote.
[lib]
name = "auli_server"
path = "src/lib.rs"

[dependencies]

# Web Framework & HTTP:
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["full"] }

# Authentication & Security:
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
argon2 = "0.5"
bcrypt = "0.19.1"
rsa = "0.9.10"
rand = { version = "0.10.1", features = ["std"] }

# Logging:
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# Serialization & Data:
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["json"] }
futures = "0.3.32"

# Database:
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

# Utilities:
derive_more = { version = "2.1.1", features = ["from", "display"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.44", features = ["serde"] }
# simple-fs = { version = "0.1", features = ["full"] }
# infobip_sdk = { version = "0.6.1", features = ["whatsapp"] }

# Error Handling:
anyhow = "1.0.102"
thiserror = "2.0.18"

# Database & AI:
# In-process embeddings (BGE-M3 ONNX). rustls TLS to match the rest of the project; no
# image-models. `ort` downloads a prebuilt ONNX Runtime at build time (Linux deploy box).
fastembed = { version = "5.17.2", default-features = false, features = ["ort-download-binaries-rustls-tls", "hf-hub-rustls-tls"] }
axum-client-ip = "1.3.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
debug=1
